--- a/p/themes/Ansum/ansum.css
+++ b/p/themes/Ansum/ansum.css
@@ -464,13 +464,24 @@ th {
 	box-shadow: inset -1px -11px 8px rgba(0, 0, 0, 0.2);
 }
 .tree .tree-folder .tree-folder-title {
-	padding: 1rem;
+	padding: 0.75rem 1rem;
 	background: #fbf9f6;
 	position: relative;
 	font-size: 0.85rem;
 	letter-spacing: 1px;
 	font-weight: 700;
 	text-transform: uppercase;
+}
+.tree .tree-folder .tree-folder-title button.dropdown-toggle {
+	margin: -0.75rem 0.25rem -0.75rem -1rem;
+	padding: 0.75rem 0 0.75rem 1rem;
+}
+.tree .tree-folder .tree-folder-title button.dropdown-toggle:hover .icon {
+	filter: brightness(1.7) !important;
+	transition: 0.1s linear;
+}
+.tree .tree-folder .tree-folder-title .icon {
+	margin-right: 0.5rem;
 }
 .tree .tree-folder .tree-folder-title .title {
 	background: inherit;
@@ -487,8 +498,6 @@ th {
 	background: #f7f2ea;
 }
 .tree .tree-folder .tree-folder-items .item {
-	padding: 0 1rem;
-	line-height: 2.5rem;
 	font-size: 1rem;
 	font-weight: 400;
 	transition: all 0.15s ease-in-out;
@@ -511,6 +520,9 @@ th {
 .tree .tree-folder .tree-folder-items .item a {
 	text-decoration: none;
 	color: #363330;
+}
+.tree .tree-folder .tree-folder-items .item a.dropdown-toggle .icon {
+	margin-right: 0.25rem;
 }
 
 /*=== Buttons */
@@ -559,8 +571,15 @@ th {
 	background: #fbf9f6;
 	border-right: 1px solid #f0e7da;
 }
+.aside.aside_feed .tree-folder-title:hover button.dropdown-toggle .icon {
+	filter: none;
+}
 .aside.aside_feed .tree {
 	margin: 10px 0 50px;
+}
+.aside a:hover .icon {
+	filter: brightness(1.7);
+	transition: 0.1s linear;
 }
 
 /* Sidebar des pages de configuration */
@@ -618,7 +637,7 @@ th {
 }
 
 .aside.aside_feed .category .title:not([data-unread="0"])::after {
-	margin: 1rem 0 0 0;
+	margin: 0.75rem 0 0 0;
 	background-color: rgba(35, 35, 0, 0.15);
 }
 
@@ -1324,3 +1343,5 @@ a, button.as-link {
 	outline: none;
 	color: #ca7227;
 }
+
+/*# sourceMappingURL=ansum.css.map */
