--- a/p/themes/base-theme/frss.rtl.css
+++ b/p/themes/base-theme/frss.rtl.css
@@ -1173,7 +1173,7 @@ input[type="search"] {
 .aside_feed .tree-folder-title button.dropdown-toggle {
 	padding: 0;
 	border: 0;
-	background-color: inherit;
+	background-color: transparent;
 	cursor: pointer;
 }
 
