--- a/p/themes/Alternative-Dark/adark.rtl.css
+++ b/p/themes/Alternative-Dark/adark.rtl.css
@@ -503,6 +503,14 @@ kbd {
 	filter: brightness(2);
 }
 
+.tree-folder-title:hover button.dropdown-toggle .icon {
+	filter: inherit;
+}
+
+.tree-folder-title button.dropdown-toggle:hover .icon {
+	filter: brightness(2);
+}
+
 .tree-folder-title .title {
 	background: inherit;
 	color: var(--font-color-middle);
@@ -602,6 +610,11 @@ kbd {
 .aside.aside_feed .category:hover .title:not([data-unread="0"])::after,
 .aside.aside_feed .feed:hover .item-title:not([data-unread="0"])::after {
 	color: var(--font-color-light);
+}
+
+.aside_feed .tree-folder-title button.dropdown-toggle {
+	margin: -0.75rem -0.75rem -0.75rem 0;
+	padding: 0.75rem 0.75rem 0.75rem 0;
 }
 
 /*=== Aside main page (feeds) */
