--- a/app/views/index/global.phtml
+++ b/app/views/index/global.phtml
@@ -13,6 +13,9 @@
 		$state_unread = true;
 	}
 ?>
+
+<datalist id="datalist-labels"></datalist>
+
 <main id="stream" class="global<?= $class ?>">
 	<h1 class="title_hidden"><?= _t('conf.reading.view.global') ?></h1>
 <?php
