origine theme for trash icon

--- a/p/themes/Origine/origine.css
+++ b/p/themes/Origine/origine.css
@@ -356,6 +356,10 @@ a:hover .icon {
 	color: var(--font-color-light);
 }
 
+.btn-attention .icon {
+	filter: brightness(5);
+}
+
 .btn-attention:active {
 	background-color: var(--attention-background-color-active);
 	box-shadow: none;
