--- a/p/themes/Alternative-Dark/adark.rtl.css
+++ b/p/themes/Alternative-Dark/adark.rtl.css
@@ -838,19 +838,14 @@ kbd {
 }
 
 .content pre {
-	margin: 10px auto;
-	padding: 10px 20px;
-	overflow: auto;
 	background: var(--background-color-dark);
 	color: var(--font-color-light);
-	font-size: 0.9rem;
 	border-radius: 3px;
 }
 
 .content code {
-	padding: 2px 5px;
 	background: var(--background-color-light);
-	border: 1px solid var(--background-color-light);
+	border-color: var(--background-color-light);
 	border-radius: 3px;
 }
 
