--- a/p/themes/Pafat/pafat.rtl.css
+++ b/p/themes/Pafat/pafat.rtl.css
@@ -876,20 +876,15 @@ a.signin {
 }
 
 .content pre {
-	margin: 10px auto;
-	padding: 10px 20px;
-	overflow: auto;
 	background-color: var(--background-color-dark);
 	color: var(--font-color-white);
-	font-size: 0.9rem;
 	border-radius: 3px;
 }
 
 .content code {
-	padding: 2px 5px;
 	background-color: var(--background-color-grey-light);
 	color: var(--font-color-code);
-	border: 1px solid var(--border-color-grey-light);
+	border-color: var(--border-color-grey-light);
 	border-radius: 3px;
 }
 
