Fix OPML for itemTimeFormat fix https://github.com/FreshRSS/FreshRSS/issues/6778

--- a/app/views/helpers/export/opml.phtml
+++ b/app/views/helpers/export/opml.phtml
@@ -44,7 +44,7 @@ function feedsToOutlines(array $feeds, bool $excludeMutedFeeds = false): array {
 			$outline['frss:xPathItemUri'] = $xPathSettings['itemUri'] ?? null;
 			$outline['frss:xPathItemAuthor'] = $xPathSettings['itemAuthor'] ?? null;
 			$outline['frss:xPathItemTimestamp'] = $xPathSettings['itemTimestamp'] ?? null;
-			$outline['frss:xPathItemTimeformat'] = $xPathSettings['itemTimeformat'] ?? null;
+			$outline['frss:xPathItemTimeFormat'] = $xPathSettings['itemTimeFormat'] ?? null;
 			$outline['frss:xPathItemThumbnail'] = $xPathSettings['itemThumbnail'] ?? null;
 			$outline['frss:xPathItemCategories'] = $xPathSettings['itemCategories'] ?? null;
 			$outline['frss:xPathItemUid'] = $xPathSettings['itemUid'] ?? null;
@@ -57,7 +57,7 @@ function feedsToOutlines(array $feeds, bool $excludeMutedFeeds = false): array {
 			$outline['frss:jsonItemUri'] = $jsonSettings['itemUri'] ?? null;
 			$outline['frss:jsonItemAuthor'] = $jsonSettings['itemAuthor'] ?? null;
 			$outline['frss:jsonItemTimestamp'] = $jsonSettings['itemTimestamp'] ?? null;
-			$outline['frss:jsonItemTimeformat'] = $jsonSettings['itemTimeformat'] ?? null;
+			$outline['frss:jsonItemTimeFormat'] = $jsonSettings['itemTimeFormat'] ?? null;
 			$outline['frss:jsonItemThumbnail'] = $jsonSettings['itemThumbnail'] ?? null;
 			$outline['frss:jsonItemCategories'] = $jsonSettings['itemCategories'] ?? null;
 			$outline['frss:jsonItemUid'] = $jsonSettings['itemUid'] ?? null;
