--- a/app/views/helpers/index/article.phtml
+++ b/app/views/helpers/index/article.phtml
@@ -4,6 +4,9 @@
 	/** @var FreshRSS_View $this */
 	$entry = $this->entry;
 	$feed = $this->feed;
+	if ($feed === null || $entry === null) {
+		return;
+	}
 ?>
 <article class="flux_content" dir="auto">
 <div class="content <?= FreshRSS_Context::userConf()->content_width ?>">
@@ -29,7 +32,7 @@
 					<div class="item manage">
 						<a class="bookmark" href="<?= Minz_Url::display($favoriteUrl) ?>" title="<?= _t('conf.shortcut.mark_favorite') ?>"><?= _i($entry->isFavorite() ? 'starred' : 'non-starred') ?></a>
 					</div>
-				<?php } ?>					
+				<?php } ?>
 			<?php } ?>
 			<div class="item">
 				<?php if (FreshRSS_Context::userConf()->show_feed_name === 't') { ?>
@@ -42,7 +45,7 @@
 			<?php
 			if (FreshRSS_Context::userConf()->topline_link && FreshRSS_Context::userConf()->show_article_icons == 't') { ?>
 				<div class="item link">
-					<a target="_blank" rel="noreferrer" href="<?= $this->entry->link() ?>" class="item-element" title="<?= _t('conf.shortcut.see_on_website') ?>"><?= _i('link') ?></a>
+					<a target="_blank" rel="noreferrer" href="<?= $entry->link() ?>" class="item-element" title="<?= _t('conf.shortcut.see_on_website') ?>"><?= _i('link') ?></a>
 				</div>
 			<?php } ?>
 		</div>
@@ -93,7 +96,7 @@
 				<?php
 				if (FreshRSS_Context::userConf()->topline_link && FreshRSS_Context::userConf()->show_article_icons == 'a') { ?>
 					<div class="item link">
-						<a target="_blank" rel="noreferrer" href="<?= $this->entry->link() ?>" class="item-element" title="<?= _t('conf.shortcut.see_on_website') ?>"><?= _i('link') ?></a>
+						<a target="_blank" rel="noreferrer" href="<?= $entry->link() ?>" class="item-element" title="<?= _t('conf.shortcut.see_on_website') ?>"><?= _i('link') ?></a>
 					</div>
 				<?php } ?>
 			</div>
