--- a/app/views/helpers/index/normal/entry_bottom.phtml
+++ b/app/views/helpers/index/normal/entry_bottom.phtml
@@ -1,6 +1,9 @@
 <?php
 	declare(strict_types=1);
 	/** @var FreshRSS_View $this */
+	if ($this->entry === null) {
+		return;
+	}
 	$bottomline_read = FreshRSS_Context::userConf()->bottomline_read;
 	$bottomline_favorite = FreshRSS_Context::userConf()->bottomline_favorite;
 	$bottomline_sharing = FreshRSS_Context::userConf()->bottomline_sharing && (count(FreshRSS_Context::userConf()->sharing) > 0);
