--- a/app/views/stats/repartition.phtml
+++ b/app/views/stats/repartition.phtml
@@ -17,7 +17,7 @@
 		if (!empty($feeds)) {
 			echo '<optgroup label="', $category->name(), '">';
 			foreach ($feeds as $feed) {
-				if ($this->feed && $feed->id() == $this->feed->id()) {
+				if ($this->feed !== null && $feed->id() == $this->feed->id()) {
 					echo '<option value="', $feed->id(), '" selected="selected" data-url="',
 						_url('stats', 'repartition', 'id', $feed->id()), '">', $feed->name(), '</option>';
 				} else {
@@ -30,7 +30,7 @@
 	}?>
 	</select>
 
-	<?php if ($this->feed) {?>
+	<?php if ($this->feed !== null) {?>
 		<a class="btn" href="<?= _url('subscription', 'feed', 'id', $this->feed->id()) ?>">
 			<?= _i('configure') ?> <?= _t('gen.action.manage') ?>
 		</a>
