--- a/p/themes/base-theme/frss.rtl.css
+++ b/p/themes/base-theme/frss.rtl.css
@@ -922,6 +922,9 @@ input[type="checkbox"]:focus-visible {
 .box .box-content .item.feed {
 	display: block;
 	padding-top: var(--frss-padding-top-bottom);
+.box .box-content .item.feed.emptyCategory {
+	padding: 0.5rem 0 0.5rem 1rem;
+}
 }
 
 .box .box-content .item.feed.moved {
