--- a/p/themes/Ansum/ansum.css
+++ b/p/themes/Ansum/ansum.css
@@ -376,8 +376,6 @@ th {
 	box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.25);
 }
 .box .box-title {
-	margin: 0;
-	padding: 0.5rem 0.75rem;
 	background: #f5f0ec;
 	color: #363330;
 	border-radius: 2px 2px 0 0;
@@ -910,12 +908,8 @@ main.prompt {
 	box-shadow: 0 2px 5px #ccc;
 }
 .content pre, .content.thin pre {
-	margin: 10px auto;
-	padding: 10px 20px;
-	overflow: auto;
 	background: #221f1d;
 	color: #fff;
-	font-size: 0.9rem;
 	border-radius: 3px;
 }
 .content pre code, .content.thin pre code {
@@ -924,9 +918,8 @@ main.prompt {
 	border: none;
 }
 .content code, .content.thin code {
-	padding: 2px 5px;
 	background: #fcfaf8;
-	border: 1px solid #f5f0ec;
+	border-color: #f5f0ec;
 	border-radius: 3px;
 }
 .content blockquote, .content.thin blockquote {
