--- a/p/themes/base-theme/frss.rtl.css
+++ b/p/themes/base-theme/frss.rtl.css
@@ -205,7 +205,7 @@ img.favicon {
 }
 
 .feed.mute .item-title .title::before,
-.box .item.feed.mute .item-title::before {
+.box .box-content .item.feed.mute .item-title::before {
 	content: '🔇 ';
 }
 
