fix aside feed: muted icon over warning icon

--- a/p/themes/base-theme/frss.css
+++ b/p/themes/base-theme/frss.css
@@ -204,7 +204,14 @@ img.favicon {
 	font-style: italic;
 }
 
-.feed.mute .item-title .title::before,
+.category .title.error::before,
+.item.feed.error .item-title .title::before,
+.box-content .item.feed.error .item-title::before {
+	content: " ⚠ ";
+	color: var(--frss-font-color-error);
+}
+
+.item.feed.mute .item-title .title::before,
 .box .box-content .item.feed.mute .item-title::before {
 	content: '🔇 ';
 }
@@ -2083,10 +2090,7 @@ html.slider-active {
 }
 
 .item.share.error a::after,
-.category .title.error::before,
-.item.feed.error .item-title .title::before,
-.theme-preview-list .properties .error::before,
-.box-content .item.feed.error .item-title::before {
+.theme-preview-list .properties .error::before {
 	content: " ⚠ ";
 	color: var(--frss-font-color-error);
 }
