improved: 'My Labels' field be searchable (#6753)
* datalist-labels

* Update main.js

--- a/app/views/index/normal.phtml
+++ b/app/views/index/normal.phtml
@@ -16,6 +16,8 @@ $useKeepUnreadImportant = !FreshRSS_Context::isImportant() && !FreshRSS_Context:
 $today = @strtotime('today');
 ?>
 
+<datalist id="datalist-labels"></datalist>
+
 <template id="share_article_template">
 	<?php $this->renderHelper('index/normal/entry_share_menu'); ?>
 	<a class="dropdown-close" href="#close">❌</a>
