fixed website link

--- a/app/views/helpers/index/grid/card.phtml
+++ b/app/views/helpers/index/grid/card.phtml
@@ -44,7 +44,7 @@
 		if ($topline_website !== 'none'):
 		?>
 		<span class="website <?= $topline_website ?>">
-			<a href="<?= _url('index', 'index', 'get', 'f_' . $this->feed->id()) ?>" class="item-element" title="<?= _t('gen.action.filter') ?>: <?= $this->feed->name() ?>">
+			<a href="<?= _url('index', 'grid', 'get', 'f_' . $this->feed->id()) ?>" class="item-element" title="<?= _t('gen.action.filter') ?>: <?= $this->feed->name() ?>">
 				<?php if (FreshRSS_Context::userConf()->show_favicons && 'name' !== $topline_website): ?><img class="favicon" src="<?= $this->feed->favicon() ?>" alt="✇" loading="lazy" /><?php endif; ?><?php if ('icon' !== $topline_website): ?><span class="websiteName"><?= $this->feed->name() ?></span><?php endif; ?>
 			</a>
 				</span><?php
