--- a/app/views/helpers/feed/update.phtml
+++ b/app/views/helpers/feed/update.phtml
@@ -101,6 +101,25 @@
 			</div>
 
 			<div class="form-group">
+				<label class="group-name" for="guidPolicy"><?= _t('sub.feed.guidPolicy') ?></label>
+				<?php
+					$guidPolicy = $this->feed->attributeString('guidPolicy');
+					if ($this->feed->attributeBoolean('hasBadGuids')) {	// Legacy
+						$guidPolicy = 'link';
+					}
+				?>
+				<div class="group-controls">
+					<select class="w50" name="guidPolicy" id="guidPolicy" required="required">
+						<option value="" <?= $guidPolicy == null ? 'selected="selected"' : '' ?>><?= _t('sub.feed.guidPolicy.id') ?></option>
+						<option value="link" <?= $guidPolicy === 'link' ? 'selected="selected"' : '' ?>><?= _t('sub.feed.guidPolicy.link') ?></option>
+						<option value="sha1:link_published" <?= $guidPolicy === 'sha1:link_published' ? 'selected="selected"' : '' ?>><?= _t('sub.feed.guidPolicy.sha1:link_published') ?></option>
+						<option value="sha1:link_published_title" <?= $guidPolicy === 'sha1:link_published_title' ? 'selected="selected"' : '' ?>><?= _t('sub.feed.guidPolicy.sha1:link_published_title') ?></option>
+						<option value="sha1:link_published_title_content" <?= $guidPolicy === 'sha1:link_published_title_content' ? 'selected="selected"' : '' ?>><?= _t('sub.feed.guidPolicy.sha1:link_published_title_content') ?></option>
+					</select>
+				</div>
+			</div>
+
+			<div class="form-group">
 				<label class="group-name" for="ttl"><?= _t('sub.feed.ttl') ?></label>
 				<div class="group-controls">
 					<select class="w50" name="ttl" id="ttl" required="required"><?php
