--- a/app/views/helpers/feed/update.phtml
+++ b/app/views/helpers/feed/update.phtml
@@ -116,6 +116,7 @@
 						<option value="sha1:link_published_title" <?= $unicityPolicy === 'sha1:link_published_title' ? 'selected="selected"' : '' ?>><?= _t('sub.feed.unicityPolicy.sha1:link_published_title') ?></option>
 						<option value="sha1:link_published_title_content" <?= $unicityPolicy === 'sha1:link_published_title_content' ? 'selected="selected"' : '' ?>><?= _t('sub.feed.unicityPolicy.sha1:link_published_title_content') ?></option>
 					</select>
+					<p class="help"><?= _i('help') ?> <?= _t('sub.feed.unicityPolicy.help') ?></p>
 				</div>
 			</div>
 
