--- a/app/views/helpers/feed/update.phtml
+++ b/app/views/helpers/feed/update.phtml
@@ -101,22 +101,22 @@
 			</div>
 
 			<div class="form-group">
-				<label class="group-name" for="unicityPolicy"><?= _t('sub.feed.unicityPolicy') ?></label>
+				<label class="group-name" for="unicityCriteria"><?= _t('sub.feed.unicityCriteria') ?></label>
 				<?php
-					$unicityPolicy = $this->feed->attributeString('unicityPolicy');
+					$unicityCriteria = $this->feed->attributeString('unicityCriteria');
 					if ($this->feed->attributeBoolean('hasBadGuids')) {	// Legacy
-						$unicityPolicy = 'link';
+						$unicityCriteria = 'link';
 					}
 				?>
 				<div class="group-controls">
-					<select class="w50" name="unicityPolicy" id="unicityPolicy" required="required">
-						<option value="id" <?= $unicityPolicy == null ? 'selected="selected"' : '' ?>><?= _t('sub.feed.unicityPolicy.id') ?></option>
-						<option value="link" <?= $unicityPolicy === 'link' ? 'selected="selected"' : '' ?>><?= _t('sub.feed.unicityPolicy.link') ?></option>
-						<option value="sha1:link_published" <?= $unicityPolicy === 'sha1:link_published' ? 'selected="selected"' : '' ?>><?= _t('sub.feed.unicityPolicy.sha1:link_published') ?></option>
-						<option value="sha1:link_published_title" <?= $unicityPolicy === 'sha1:link_published_title' ? 'selected="selected"' : '' ?>><?= _t('sub.feed.unicityPolicy.sha1:link_published_title') ?></option>
-						<option value="sha1:link_published_title_content" <?= $unicityPolicy === 'sha1:link_published_title_content' ? 'selected="selected"' : '' ?>><?= _t('sub.feed.unicityPolicy.sha1:link_published_title_content') ?></option>
+					<select class="w50" name="unicityCriteria" id="unicityCriteria" required="required">
+						<option value="id" <?= $unicityCriteria == null ? 'selected="selected"' : '' ?>><?= _t('sub.feed.unicityCriteria.id') ?></option>
+						<option value="link" <?= $unicityCriteria === 'link' ? 'selected="selected"' : '' ?>><?= _t('sub.feed.unicityCriteria.link') ?></option>
+						<option value="sha1:link_published" <?= $unicityCriteria === 'sha1:link_published' ? 'selected="selected"' : '' ?>><?= _t('sub.feed.unicityCriteria.sha1:link_published') ?></option>
+						<option value="sha1:link_published_title" <?= $unicityCriteria === 'sha1:link_published_title' ? 'selected="selected"' : '' ?>><?= _t('sub.feed.unicityCriteria.sha1:link_published_title') ?></option>
+						<option value="sha1:link_published_title_content" <?= $unicityCriteria === 'sha1:link_published_title_content' ? 'selected="selected"' : '' ?>><?= _t('sub.feed.unicityCriteria.sha1:link_published_title_content') ?></option>
 					</select>
-					<p class="help"><?= _i('help') ?> <?= _t('sub.feed.unicityPolicy.help') ?></p>
+					<p class="help"><?= _i('help') ?> <?= _t('sub.feed.unicityCriteria.help') ?></p>
 				</div>
 			</div>
 
