New unicity policies for feeds with bad GUIDs (#4487)
New set of unicity criteria options.

New tolerance heuristic:

> `$invalidGuidsTolerance` (default 0.05) The maximum ratio (rounded) of invalid GUIDs to tolerate before degrading the unicity criteria.
> Example for 0.05 (5% rounded): tolerate 0 invalid GUIDs for up to 9 articles, 1 for 10, 2 for 30, 3 for 50, 4 for 70, 5 for 90, 6 for 110, etc.
> The default value of 5% rounded was chosen to allow 1 invalid GUID for feeds of 10 articles, which is a frequently observed amount of articles.

--- a/p/themes/base-theme/frss.css
+++ b/p/themes/base-theme/frss.css
@@ -242,6 +242,14 @@ label {
 	display: block;
 }
 
+label.inline {
+	display: inline-block;
+}
+
+label > span[title] {
+	text-decoration: underline dotted;
+}
+
 input:not(.w50,.w100) {
 	max-width: 90%;
 	width: 300px;
