--- a/app/views/helpers/feed/update.phtml
+++ b/app/views/helpers/feed/update.phtml
@@ -101,6 +101,30 @@
 			</div>
 
 			<div class="form-group">
+				<label class="group-name" for="unicityCriteria"><?= _t('sub.feed.unicityCriteria') ?></label>
+				<?php
+					$unicityCriteria = $this->feed->attributeString('unicityCriteria');
+					if ($this->feed->attributeBoolean('hasBadGuids')) {	// Legacy
+						$unicityCriteria = 'link';
+					}
+				?>
+				<div class="group-controls">
+					<select class="w50" name="unicityCriteria" id="unicityCriteria" required="required">
+						<option value="id" <?= $unicityCriteria == null ? 'selected="selected"' : '' ?>><?= _t('sub.feed.unicityCriteria.id') ?></option>
+						<option value="link" <?= $unicityCriteria === 'link' ? 'selected="selected"' : '' ?>><?= _t('sub.feed.unicityCriteria.link') ?></option>
+						<option value="sha1:link_published" <?= $unicityCriteria === 'sha1:link_published' ? 'selected="selected"' : '' ?>><?= _t('sub.feed.unicityCriteria.sha1:link_published') ?></option>
+						<option value="sha1:link_published_title" <?= $unicityCriteria === 'sha1:link_published_title' ? 'selected="selected"' : '' ?>><?= _t('sub.feed.unicityCriteria.sha1:link_published_title') ?></option>
+						<option value="sha1:link_published_title_content" <?= $unicityCriteria === 'sha1:link_published_title_content' ? 'selected="selected"' : '' ?>><?= _t('sub.feed.unicityCriteria.sha1:link_published_title_content') ?></option>
+					</select>
+					<label for="unicityCriteriaForced" class="inline">
+						<input type="checkbox" name="unicityCriteriaForced" id="unicityCriteriaForced" value="1"<?= $this->feed->attributeBoolean('unicityCriteriaForced') ? ' checked="checked"' : '' ?> />
+						<?= _t('sub.feed.unicityCriteria.forced') ?>
+					</label>
+					<p class="help"><?= _i('help') ?> <?= _t('sub.feed.unicityCriteria.help') ?></p>
+				</div>
+			</div>
+
+			<div class="form-group">
 				<label class="group-name" for="ttl"><?= _t('sub.feed.ttl') ?></label>
 				<div class="group-controls">
 					<select class="w50" name="ttl" id="ttl" required="required"><?php
