--- a/app/views/helpers/feed/update.phtml
+++ b/app/views/helpers/feed/update.phtml
@@ -234,7 +234,7 @@
 						<option value="100"<?= $this->feed->attributeInt('read_when_same_title_in_feed') == 100 ? ' selected="selected"' : '' ?>>100</option>
 						<option value="1000"<?= $this->feed->attributeInt('read_when_same_title_in_feed') == 1000 ? ' selected="selected"' : '' ?>>1 000</option>
 					</select>
-					<?= _t('conf.reading.read.when_same_title') ?>
+					<?= _t('conf.reading.read.when_same_title_in_feed') ?>
 				</div>
 			</div>
 
