card colors for Origine theme

--- a/p/themes/Origine/origine.css
+++ b/p/themes/Origine/origine.css
@@ -841,13 +841,15 @@ a:hover .icon {
 	border-left: 2px solid var(--contrast-border-color-active);
 }
 
-.flux .flux_header:hover {
+.flux .flux_header:hover,
+.flux .card:hover {
 	background-color: var(--background-color-hover);
 }
 
 .flux .flux_header:not(.current):hover .flux_header,
 .flux:not(.current):hover .flux_header .title,
-.flux.current .flux_header {
+.flux.current .flux_header,
+.flux.current .card {
 	background-color: var(--background-color-hover);
 }
 
@@ -856,13 +858,15 @@ a:hover .icon {
 	border-left: 2px solid var(--unread-article-border-color);
 }
 
-.flux.not_read .flux_header {
+.flux.not_read .flux_header,
+.flux.not_read .card {
 	background-color: var(--unread-article-background-color);
 }
 
 .flux.not_read:not(.current):hover .flux_header .title,
 .flux.not_read:not(.current):hover .flux_header,
-.flux.not_read.current .flux_header {
+.flux.not_read.current .flux_header,
+.flux.not_read:not(.current):hover .card {
 	background-color: var(--unread-article-background-color-hover);
 }
 
@@ -871,13 +875,15 @@ a:hover .icon {
 	border-left: 2px solid var(--favorite-article-border-color);
 }
 
-.flux.favorite:not(.current) .flux_header {
+.flux.favorite:not(.current) .flux_header,
+.flux.favorite:not(.current) .card {
 	background-color: var(--favorite-article-background-color);
 }
 
 .flux.favorite:not(.current):hover .flux_header .title,
 .flux.favorite:not(.current):hover .flux_header,
-.flux.favorite.current .flux_header {
+.flux.favorite.current .flux_header,
+.flux.favorite:not(.current):hover .card {
 	background-color: var(--favorite-article-background-color-hover);
 }
 
